# algo-trader-platform

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .gitignore  README.md  docker-compose.app.yml  docker-compose.worker.yml  docker-compose.yml  plan_implementation.md  platform_design.md  pyproject.toml
services/analysis_service/: Dockerfile  README.md  __init__.py  pyproject.toml
services/analysis_service/app/: cache.py  main.py  queries.py  routes.py  tasks.py  trade_gate_semantics.py
services/analysis_service/app/evaluation/: __init__.py  greeks_validator.py  rule_checker.py
services/analysis_service/app/llm/: adapter.py  base.py  chunker.py  copilot_provider.py  json_utils.py  openai_provider.py  prompts.py
services/analysis_service/app/llm/agents/: __init__.py  _closeai_agent_provider.py  _copilot_agent_provider.py  _deepseek_agent_provider.py  _openai_agent_provider.py  _qiniu_agent_provider.py  base_agent.py  chain_agent.py  critic_agent.py  cross_asset_agent.py  flow_agent.py  models.py  orchestrator.py  portfolio_selector.py  post_merge_portfolio_agent.py  spread_agent.py  synthesizer_agent.py  trend_agent.py  volatility_agent.py
services/analysis_service/app/skills/: __init__.py
services/analysis_service/app/skills/trading-analysis/: SKILL.md
services/analysis_service/app/skills/trading-analysis/assets/: blueprint-schema.json
services/analysis_service/app/skills/trading-analysis/references/: cross-asset.md  flow-microstructure.md  trend-momentum.md  (+4 more)
services/analysis_service/app/tasks/: analyze.py  blueprint.py  helpers.py
services/analysis_service/tests/: test_adapter.py  test_base_agent_config.py  test_blueprint_routes.py  test_blueprint_validation.py  test_blueprint_validation_flow.py  test_chunker.py  test_closeai_provider.py  test_deepseek_provider.py  test_json_utils.py  test_manual_analyze_provider_e2e.py  test_orchestrator.py  test_portfolio_selector.py  test_post_merge_prompt_contract.py  test_prompts.py  test_rule_checker.py  test_synthesizer_normalization.py  test_validation_fail_fast.py
services/data_service/: Dockerfile  README.md  __init__.py  pyproject.toml
services/data_service/app/: cache.py  converters.py  main.py  routes.py  scheduler.py  storage.py  tasks.py
services/data_service/app/fetchers/: __init__.py  greeks.py  option_fetcher.py  registry.py  resilience.py  stock_fetcher.py
services/data_service/app/filters/: __init__.py  base.py  option_filters.py  stock_filters.py
services/data_service/app/tasks/: aggregation.py  capture.py  coordination.py  earnings.py  intraday.py  intraday_stock.py  manual.py  options_pipeline.py  pipeline.py
services/data_service/tests/: test_coordination.py  test_earnings.py  test_pipeline_watchdog.py  test_routes.py
services/execution_service/: Dockerfile  README.md  __init__.py  pyproject.toml
services/execution_service/app/: blueprint_loader.py  main.py  models.py  routes.py  rule_engine.py  scheduler.py  tasks.py
services/execution_service/app/broker/: base.py  paper.py
services/signal_service/: Dockerfile  README.md  __init__.py  pyproject.toml
services/signal_service/app/: cross_asset.py  data_loaders.py  main.py  queries.py  routes.py  signal_generator.py  tasks.py
services/signal_service/app/filters/: __init__.py  option_filters.py  stock_filters.py
services/signal_service/app/indicators/: cal_utils.py  option_indicators.py  stock_indicators.py
services/signal_service/app/tasks/: signal.py
services/signal_service/tests/: test_cross_asset.py  test_routes.py  test_signal_service.py
services/trade_service/: Dockerfile  README.md  pyproject.toml
services/trade_service/app/: audit.py  helpers.py  main.py  models.py
services/trade_service/app/broker/: __init__.py  base.py  futu.py  paper.py
services/trade_service/app/execution/: blueprint_loader.py  market_context.py  routes.py  rule_engine.py  scheduler.py  tasks.py  tasks_intraday.py
services/trade_service/app/execution/intraday/: __init__.py  features.py  optimizer.py  scorer.py  strategy_profiles.py
services/trade_service/app/execution/risk/: position_collector.py  risk_engine.py  risk_monitor.py
services/trade_service/app/portfolio/: routes.py  service.py  tasks.py
services/trade_service/app/tasks/: daily_report.py
shared/: __init__.py  async_bridge.py  celery_app.py  data_quality.py  distributed_lock.py  metrics.py  pipeline.py  pyproject.toml  redbeat_cluster.py  redis_cluster_backend.py  redis_pool.py
shared/config/: __init__.py  settings.py
shared/db/: __init__.py  session.py  tables.py
shared/models/: __init__.py  blueprint.py  filter.py  intraday.py  option.py  order.py  portfolio.py  signal.py
shared/notifier/: __init__.py  base.py  discord.py  helpers.py  manager.py
shared/tests/: test_async_bridge.py  test_celery_schedule.py  test_data_quality.py  test_error_text.py  test_metrics.py  test_settings.py
shared/utils/: __init__.py  error_text.py  logging.py  time.py  token.py
(+55 files in other folders)
