[project]
name = "algo-trader-shared"
version = "0.1.0"
description = "Shared models, config, and utilities for algo-trader-platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "redis[hiredis]",
    "structlog",
    "pyyaml",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "celery-redbeat>=2.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "shared",
    "shared.config",
    "shared.db",
    "shared.models",
    "shared.utils",
]

[tool.setuptools.package-dir]
shared = "."
