[project]
name = "analysis-service"
version = "0.1.0"
description = "Analysis Service - LLM-powered trading blueprint generation"
requires-python = ">=3.11"
dependencies = [
    "algo-trader-shared",
    "fastapi",
    "uvicorn[standard]",
    "openai>=1.66.0",
    "anthropic>=0.49.0",
    "celery[redis]",
    "github-copilot-sdk>=0.1.32",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
