[project]
name = "execution-service"
version = "0.1.0"
description = "Execution Service - blueprint loading and rule-based execution"
requires-python = ">=3.11"
dependencies = [
    "algo-trader-shared",
    "fastapi",
    "uvicorn[standard]",
    "grpcio",
    "celery[redis]",
    "redis[hiredis]",
    "apscheduler>=3.10",
]
